--- a/style.css
+++ b/style.css
@@ -1,24 +1,31 @@
+*{
+    padding:0;
+    margin:0;
+}
+
 html {
     color: black;
-    margin-left:125px;
-    margin-right:125px;
     font-family: Garamond;
-    display: grid;
+    padding: 0;
 }
 
 .nav {
-    box-sizing: content-box;
     width: 100%;
     background-color: white;
-    position: sticky;
-    height: 46px;
+    height: 47px;
     color: black;
+    display: fixed;
+    top: 0px;
+    left: 0px;
 }
 
 .nav a {
     float: right;
     text-align: center;
     padding: 14px 14px;
+    margin: auto;
+    text-decoration: none;
+    
 }
 
 .nav a:hover {
@@ -27,8 +34,11 @@ html {
 }
 
 .nav a.active {
-    background-color:grey;
-    color: white;
+    font-weight: bold;
+}
+
+.nav a:visited {
+    color: black;
 }
 
 .nav img {
@@ -37,29 +47,46 @@ html {
 
 .top-banner {
     background-image:url('./Images/header.jpg');
-    background-size:contain ;
+    background-size:cover;
     background-repeat: no-repeat;
-    height: 800px;
+    height: 500px;
     background-position:center;
+    margin-bottom: 5px;
 }
 
 .top-banner p {
     position:relative;
-    top: 600px;
-    left: 1000px;
+    top: 60%; right: 5%;
+    text-align: right;
     color: white;
     opacity: 0.7;
     font-size: 80px;
 }
 
 .aboutme {
-    box-sizing:content-box;
-    width:50%;    
-    position: static;
+    border: 1px;
+    width: 49%;
+    height: 300px;
+    display: inline-block;
+    position:relative;
 }
 
+.aboutme img {
+    border-radius:50%;
+    width: 150px;
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 10px;
+}
 .project {
-    box-sizing:content-box;
-    width:50%;
-    position: static;
+    border: 1px;
+    width: 49%;
+    height: 300px;
+    float: right;
+}
+
+.aboutme div,
+.prject div {
+    float: left;
+    padding: 0% 20% 0%;
 }
